fix: nav sidebar scrollbar styling

--- a/src/components/nav-sidebar.scss
+++ b/src/components/nav-sidebar.scss
@@ -1,4 +1,5 @@
 .nav-sidebar {
+  @include scrollbar;
   display: flex;
   flex-direction: column;
   padding: 0.25em;
